--- a/style.css
+++ b/style.css
@@ -6,20 +6,39 @@
 body {
     background: #f8f9fa;
 }
+h1 {
+    font-size: 24px;
+}
 main{
-    width:420px;
+    max-width:420px;
     margin: auto;
     background-color: #fff;
+    min-height: 100vh;
 }
 .top-section {
     background: #000;
-    padding: 40px 0;
+    padding: 15px 0;
     text-align: center;
     color: #fff;
 }
+.button-group{
+    border-top: 1px solid #f8f9fa4d  ;
+    background-color: #000;
+}
+.button-group a{
+    font-size: 14px;
+    color: #fff;
+    padding: 10px;
+    width: 33%;
+    border-right: 1px solid #f8f9fa4d;
+    border-radius: 0;
+}
+.button-group a:last-child{
+    border: 0;
+}
 .icon-circle {
-    width: 90px;
-    height: 90px;
+    width: 70px;
+    height: 70px;
     border-radius: 50%;
     background: #fff;
     display: flex;
@@ -28,23 +47,18 @@ main{
     margin: 0 auto 15px;
 }
 .contact-box {
-    padding: 30px;
+    padding: 10px 20px;
+}
+
+hr {
+    margin: 5px 0;
 }
 .social-icons i {
-    font-size: 30px;
+    font-size: 20px;
     margin: 6px;
     cursor: pointer;
 }
-.download-btn {
-    background: #000;
-    color: #fff;
-    width: 100%;
-    padding: 12px;
-    border-radius: 6px;
-    text-align: center;
-    display: inline-block;
-    text-decoration: none;
-}
+
 .download-btn {
     background: #000;
     color: #fff;
